# web-proof-reader

./: .gitignore  .pre-commit-hooks.yaml  Cargo.toml  config.toml  zola-chain.sh
src/: cli.rs  dispatch.rs  error.rs  html.rs  main.rs
