[package]
name = "web-proof-reader"
version = "0.1.0"
authors = ["Sam Vente <savente93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
lazy_static = "1.4.0"
regex = "1.4.5"
scraper = "0.12.0"
selectors = "0.22.0"
walkdir = "2.3.2"
