[package]
name = "web-proof-reader"
version = "0.1.1"
authors = ["Sam Vente <savente93@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
colored = "2.0.0"
glob = "0.3.0"
lazy_static = "1.4.0"
palette = "0.5.0"
rayon = "1.5.0"
regex = "1.5.4"
scraper = "0.12.0"
selectors = "0.22.0"
serde = "1.0.125"
serde_derive = "1.0.125"
toml = "0.5.8"
walkdir = "2.3.2"

[dev-dependencies]
tempfile = "3.2.0"

[[bin]]
name = "proof-reader"
path = "src/main.rs" 
